# curso-ia

./: .gitignore  README.md  pyproject.toml  rag-qdrant.py
agents/: exemplo-1.py  exemplo-2-openai.py  exemplo-2.py  exemplo-3.py  memory-1.py  memory-2.py  workflows-1.py  workflows-2.py  workflows-3.py
docling/: 4-hybrid-chunker.py  5-metadados.py  5.1-metadados.py  6-embeddings.py
docling/test_output/: docling_paper_metadata.jsonl
projeto/: pipeline_v1_basic.py  pipeline_v2_hybrid.py  pipeline_v3_rerank.py  pipeline_v4_semantic_chunk.py  pipeline_v5_extract_sec.py  test-chunker.py
projeto/app/: README.md  endpoint.py
projeto/utils/: semantic_chunker.py
