[project]
name = "curso-ia"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.93.0",
    "edgartools>=5.31.3",
    "fastapi>=0.136.1",
    "groq>=1.2.0",
    "hdbscan>=0.8.43",
    "langextract>=1.4.0",
    "mem0ai",
    "nltk>=3.9.4",
    "numpy>=2.4.5",
    "openai>=2.37.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "qdrant-client[fastembed]>=1.18.0",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.5.0",
    "uvicorn>=0.47.0",
    "whoosh>=2.7.4",
    "yfinance>=1.3.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

[tool.uv.sources]
mem0ai = { git = "https://github.com/mem0ai/mem0.git" }
